--- a/index.html
+++ b/index.html
@@ -153,13 +153,36 @@
 </div></div>
         </div>
         <footer class="mdl-mini-footer">
-          <div class="footer-container">
-            <div class="mdl-logo">&copy; Unitiled. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a></div>
-            <ul class="mdl-mini-footer__link-list">
-              <li><a href="#">Privacy & Terms</a></li>
-            </ul>
-          </div>
-        </footer>
+            <div class="mdl-mini-footer__left-section">
+               <!-- <div class="mdl-logo">
+                  Copyright Information
+               </div> -->
+               <ul class="mdl-mini-footer__link-list">
+                  <li>Powered by <b>GDG Sri Lanka</b></li>
+               </ul>
+            </div>
+            <div class="mdl-mini-footer__right-section">
+              <a href="https://www.facebook.com/GDGSriLanka">
+                <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                    <img src="img/facebook-logo.png"></a>
+              </button>
+              </a>
+
+              <a href="https://www.twitter.com/GDGLK">
+                <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                    <img src="img/twitter-logo.png">
+              </button>
+              </a>
+
+              <a href="https://plus.google.com/+GDGSriLankaChapter">
+              <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
+                
+                  <img src="img/google-plus-logo.png">
+              </button>
+              </a>
+
+            </div>
+         </footer>
       </main>
       <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
       <script src="scripts/TweenMax.js"></script>
