Change header to white and add io logo

--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
   </head>
   <body id="top">
       <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-            <header class="mdl-layout__header">
+            <header class="mdl-layout__header mdl-color--grey-50">
               <div class="mdl-layout__header-row">
                 <!-- Title -->
-                <span class="mdl-layout-title">Google I/O Extended 2017 </span>
+                <svg style="transform: translateY(-1px) translateX(-19px) scale(0.345)" width="188" height="133" viewBox="0 0 188 133" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path fill="#5471F9" d="M0 111.963h47.71V17.9H0z"></path><path fill="#31E8B7" d="M82.85 0L53.308 131.147l7.42 1.642L90.273 1.642z"></path><path d="M136.648 14c-28.3 0-51.242 22.745-51.242 50.8 0 28.057 22.942 50.8 51.242 50.8 28.301 0 51.242-22.743 51.242-50.8 0-28.055-22.94-50.8-51.242-50.8" fill="#5471F9"></path></g></svg>
+
+                <span style="transform:translateX(-61px)" class="mdl-layout-title mdl-color-text--grey-900">Google I/O Extended 2017 </span>
                 <!-- Add spacer, to align navigation to the right -->
                 <div class="mdl-layout-spacer"></div>
                 <!-- Navigation. We hide it in small screens. -->
                 <nav class="mdl-navigation mdl-layout--large-screen-only">
-                  <a class="mdl-navigation__link" href="">Schedule</a>
-                  <a class="mdl-navigation__link" href="">Register</a>
+                  <a class="mdl-navigation__link mdl-color-text--grey-900" href="">Schedule</a>
+                  <a class="mdl-navigation__link mdl-color-text--grey-900" href="">Register</a>
                 </nav>
               </div>
             </header>
