navbar reg button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <!-- Navigation. We hide it in small screens. -->
                 <nav class="mdl-navigation mdl-layout--large-screen-only">
                   <a class="mdl-navigation__link mdl-color-text--grey-900" href="">Schedule</a>
-                  <a class="mdl-navigation__link mdl-color-text--grey-900" href="">Register</a>
+                  <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--colored" href="http://rsvp.lk/gdgsrilanka/google-io-2017-sri-lanka">Register Now</a>
                 </nav>
               </div>
             </header>
@@ -178,7 +178,7 @@
 
               <a href="https://plus.google.com/+GDGSriLankaChapter">
               <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
-                
+
                   <img src="img/google-plus-logo.png">
               </button>
               </a>
