--- a/index.html
+++ b/index.html
@@ -21,12 +21,9 @@
     </a>
 
     <header class="mdl-layout__header mdl-color--grey-50">
-        <div class="mdl-layout-icon">
-            <i class="material-icons" style="color:#000000;">keyboard_arrow_up</i>
-        </div>
         <div class="mdl-layout__header-row" style="color:#000;">
             <!-- Title -->
-            <svg style="transform: translateY(-1px) translateX(-19px) scale(0.345)" width="188" height="133"
+            <svg style="transform: translateY(-1px) translateX(-19px) scale(0.345); margin-left:-50px;" width="188" height="133"
                  viewBox="0 0 188 133" xmlns="http://www.w3.org/2000/svg">
                 <g fill="none" fill-rule="evenodd">
                     <path fill="#5471F9" d="M0 111.963h47.71V17.9H0z"></path>
@@ -251,7 +248,21 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://code.getmdl.io/1.3.0/material.min.js" defer></script>
-    <script src="scripts/scroll.js"></script>
+    <script>
+        $(function(){
+            $("a.smooth").click(function(e){
+                e.preventDefault();
+                var speed = 500;
+                var href= $(this).attr("href");
+                var target = $(href == "#" || href == "" ? 'html' : href);
+                var nav_height = $(".mdl-layout__header-row").height();
+                var position = target.get( 0 ).offsetTop;
+                $(".mdl-layout__content").animate({scrollTop:position}, speed, "swing");
+                return false;
+            });
+        });
+    </script>
+    <!--<script src="scripts/scroll.js"></script>-->
     <script src="scripts/TweenMax.js"></script>
     <script src="scripts/countdown.js"></script>
     <script src="scripts/main.js"></script>
