--- a/index.html
+++ b/index.html
@@ -97,13 +97,39 @@
                     </div>
                 </div>
 
+                <section class="section--center mdl-grid site-max-width" style="margin-top:-60px; z-index:2000;position: relative;">
+                    <div class="mdl-cell mdl-cell--12-col" style="background-color: #30E7B6; height:3px;">
+                    </div>
+                </section>
+
                 <section id="about" class="section--center mdl-grid site-max-width">
+                    <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  mdl-shadow--4dp">
+                        <div class="mdl-card__title">
+                            <h2 class="mdl-card__title-text">What is Google I/O?</h2>
+                        </div>
+                        <div class="mdl-card__supporting-text">
+                            Efficiently unleash cross-media information without cross-media value. Quickly maximize
+                            timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions
+                            without functional solutions.
+                        </div>
+                        <div class="mdl-card__actions  mdl-card--border">
+                            <a href="#"
+                               class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--colored">See more details</a>
+                        </div>
+                    </div>
+                    <div class="mdl-cell mdl-cell--3-col">
+                        <center>
+                            <img src="img/GDG-program-logo.png" style=" height:200px;"/>
+                        </center>
+                    </div>
+                </section>
+                <section id="io15" class="section--center mdl-grid site-max-width">
                     <header class="section__play-btn mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white  mdl-shadow--4dp">
                         <i class="material-icons">play_circle_filled</i>
                     </header>
                     <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone  mdl-shadow--4dp">
                         <div class="mdl-card__title">
-                            <h2 class="mdl-card__title-text">Introduction</h2>
+                            <h2 class="mdl-card__title-text">Google I/O Extended 2016 Sri Lanka</h2>
                         </div>
                         <div class="mdl-card__supporting-text">
                             Efficiently unleash cross-media information without cross-media value. Quickly maximize
