--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <div class="mdl-card__media">
                             <img class="article-image" src="img/portfolio2.jpg" border="0" alt="">
                         </div>
-                        <div class="mdl-card__title">
+                        <div class="mdl-card__title" data-animation-angle="356">
                             <h2 class="mdl-card__title-text">Night Shadow</h2>
                         </div>
                         <div class="mdl-card__supporting-text">
@@ -171,23 +171,23 @@
                         </div>
                     </div>
                     <div class="mdl-cell mdl-card mdl-shadow--4dp portfolio-card">
-                        <div class="mdl-card__media">
-                            <img class="article-image" src="img/portfolio3.jpg" border="0" alt="">
-                        </div>
-                        <div class="mdl-card__title">
-                            <h2 class="mdl-card__title-text">Sky Reach</h2>
-                        </div>
-                        <div class="mdl-card__supporting-text">
-                            Enim labore aliqua consequat ut quis ad occaecat aliquip incididunt. Sunt nulla eu enim
-                            irure enim nostrud aliqua consectetur ad consectetur sunt ullamco officia. Ex officia
-                            laborum et consequat duis.
-                        </div>
+                        <svg width="390px" height="390px" viewBox="0 0 390 390" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="pointer-events: none">
+                            <g class="slash-extended-3">
+                                <g class="primary" data-svg-origin="6.999999999999619 140.99999999999957" style="transform: matrix(0.86601, 0.49999, -0.49999, 0.86601, 259.439, 69.3916); transform-origin: 0px 0px 0px;">
+                                    <rect class="slash" x="-3.8097185e-13" y="-4.26325641e-13" width="14" height="282" fill="#5775F4" style="fill: rgb(255, 108, 0);"></rect>
+                                </g>
+                            </g>
+                        </svg>
+
+
                     </div>
                 </section>
 
                 <section class="section--center mdl-grid site-max-width homepage-portfolio">
                     <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent"
                        href="portfolio.html">View Portfolio</a>
+
+                    <svg width="277" height="95" viewBox="0 0 277 95" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path fill="#5471F9" d="M195.129 90.674h6.85V2.514h-6.85zm-111.083 0h6.85V24.919h-6.85zM81.709 8.359c0-3.238 2.619-5.845 5.871-5.845 3.253 0 5.872 2.607 5.872 5.845 0 3.237-2.62 5.845-5.872 5.845s-5.871-2.608-5.871-5.845M220.1 9.81l-.014-7.191 40.773-.082.014 7.192z"></path><path fill="#40E7B8" d="M232.99 92.868l-6.122-3.06 43.927-87.052 6.122 3.06z"></path><path fill="#5471F9" d="M147.112 38.276L143.7 21.693l2.409-.32 3.39 16.581z"></path><path stroke="#5471F9" stroke-width=".5" d="M147.112 38.276L143.7 21.693l2.409-.32 3.39 16.581z"></path><path fill="#5471F9" d="M154.681 42.097l3.674-16.528 2.33.686-3.691 16.517z"></path><path stroke="#5471F9" stroke-width=".5" d="M154.681 42.097l3.674-16.528 2.33.686-3.691 16.517z"></path><path fill="#5471F9" d="M160.062 48.656l10.075-13.638 1.852 1.565-10.086 13.62z"></path><path stroke="#5471F9" stroke-width=".5" d="M160.062 48.656l10.075-13.638 1.852 1.565-10.086 13.62z"></path><path fill="#5471F9" d="M162.295 56.817l14.79-8.357 1.05 2.182-14.794 8.336z"></path><path stroke="#5471F9" stroke-width=".5" d="M162.295 56.817l14.79-8.357 1.05 2.182-14.794 8.336z"></path><path fill="#5471F9" d="M161.014 65.196l16.922-1.697.074 2.418-16.916 1.677z"></path><path stroke="#5471F9" stroke-width=".5" d="M161.014 65.196l16.922-1.697.074 2.418-16.916 1.677z"></path><path fill="#5471F9" d="M156.424 72.312l16.152 5.301-.92 2.238-16.138-5.317z"></path><path stroke="#5471F9" stroke-width=".5" d="M156.424 72.312l16.152 5.301-.92 2.238-16.138-5.317z"></path><path fill="#5471F9" d="M149.331 76.977l12.615 11.353-1.751 1.677-12.597-11.363z"></path><path stroke="#5471F9" stroke-width=".5" d="M149.331 76.977l12.615 11.353-1.751 1.677-12.597-11.363z"></path><path fill="#5471F9" d="M140.96 78.353l6.81 15.512-2.29.811-6.788-15.513z"></path><path stroke="#5471F9" stroke-width=".5" d="M140.96 78.353l6.81 15.512-2.29.811-6.788-15.513z"></path><path fill="#5471F9" d="M132.715 76.253l-.02 16.927-2.424-.171.04-16.92z"></path><path stroke="#5471F9" stroke-width=".5" d="M132.715 76.253l-.02 16.927-2.424-.171.04-16.92z"></path><path fill="#5471F9" d="M126.049 70.982l-6.923 15.462-2.145-1.136 6.937-15.448z"></path><path stroke="#5471F9" stroke-width=".5" d="M126.049 70.982l-6.923 15.462-2.145-1.136 6.937-15.448z"></path><path fill="#5471F9" d="M122.106 63.49l-12.627 11.34-1.498-1.904 12.634-11.32z"></path><path stroke="#5471F9" stroke-width=".5" d="M122.106 63.49l-12.627 11.34-1.498-1.904 12.634-11.32z"></path><path fill="#5471F9" d="M121.573 55.072l-16.188 5.192-.582-2.348 16.187-5.17z"></path><path stroke="#5471F9" stroke-width=".5" d="M121.573 55.072l-16.188 5.192-.582-2.348 16.187-5.17z"></path><path fill="#5471F9" d="M124.507 47.11l-16.917-1.736.417-2.382 16.908 1.754z"></path><path stroke="#5471F9" stroke-width=".5" d="M124.507 47.11l-16.917-1.736.417-2.382 16.908 1.754z"></path><path fill="#5471F9" d="M130.436 41.046l-14.764-8.403 1.35-2.01 14.748 8.415z"></path><path stroke="#5471F9" stroke-width=".5" d="M130.436 41.046l-14.764-8.403 1.35-2.01 14.748 8.415z"></path><path fill="#5471F9" d="M138.337 37.891l-10.053-13.653 2.054-1.291 10.034 13.66z"></path><path stroke="#5471F9" stroke-width=".5" d="M138.337 37.891l-10.053-13.653 2.054-1.291 10.034 13.66z"></path><path fill="#40E7B8" d="M46.11 21.874l-.006-3.01 17.065-.033.005 3.01zm-22.642 0l-.006-3.01 17.064-.033.006 3.01zm-23.462 0L0 18.864l17.064-.033.006 3.01zM46.11 44.615l-.006-3.01 17.065-.034.005 3.01zm-22.642 0l-.006-3.01 17.064-.034.006 3.01zm-23.462 0L0 41.605l17.064-.034.006 3.01z"></path><path fill="#32E8B7" d="M21.897 17.472l-3.024.006L18.839.493l3.024-.005z"></path><path fill="#40E7B8" d="M21.897 40.008l-3.023.006-.035-16.984 3.024-.006zm0 23.352l-3.023.006-.035-16.984 3.024-.006z"></path><path fill="#32E8B7" d="M44.745 17.472l-3.024.006L41.687.493 44.71.488z"></path><path fill="#40E7B8" d="M44.745 40.008l-3.024.006-.034-16.984 3.023-.006zm0 23.352l-3.024.006-.034-16.984 3.023-.006z"></path></g></svg>
                 </section>
 
                 <div class="homepage-footer">
@@ -236,9 +236,13 @@
                         </div>
                     </section>
                 </div>
+
+                <center>
+                    <img src="img/wipe1.gif" style="height:100px; margin-top:20px;" />
+                </center>
             </div>
         </div>
-        <footer class="mdl-mini-footer">
+        <footer class="mdl-mini-footer" style="background-color:#EEEEEE;">
             <div class="mdl-mini-footer__left-section">
                 <!-- <div class="mdl-logo">
                    Copyright Information
@@ -247,27 +251,11 @@
                     <li>Powered by <b>GDG Sri Lanka</b></li>
                 </ul>
             </div>
-            <div class="mdl-mini-footer__right-section">
-                <a href="https://www.facebook.com/GDGSriLanka">
-                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
-                        <img src="img/facebook-logo.png">
-                </a>
-                </button>
-                </a>
-
-                <a href="https://www.twitter.com/GDGLK">
-                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
-                        <img src="img/twitter-logo.png">
-                    </button>
-                </a>
-
-                <a href="https://plus.google.com/+GDGSriLankaChapter">
-                    <button class="mdl-button mdl-js-button mdl-js-ripple-effect">
-
-                        <img src="img/google-plus-logo.png">
-                    </button>
-                </a>
-
+            <div class="mdl-mini-footer__right-section" style="margin-right:80px; margin-top:10px;">
+                <a aria-label="Facebook" href="https://plus.google.com/+GoogleDevelopers" class="footer__social__icon"><svg width="18" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="-296.6 411.2 11.2 13.6"><style>.st0{opacity:.7;fill:#616161}</style><path class="st0" d="M-288.9 417.1h-1.4v4.9h-2v-4.9h-1v-1.7h1v-1c0-1.4.6-2.2 2.2-2.2h1.4v1.7h-.8c-.6 0-.7.2-.7.7v.8h1.5l-.2 1.7z"></path></svg></a>
+                <a aria-label="Google+" href="https://plus.google.com/+GoogleDevelopers" class="footer__social__icon"><svg width="22" height="14" viewBox="0 0 22 14" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd" opacity=".7"><path d="M7 6v2.4h3.97c-.16 1.03-1.2 3.02-3.97 3.02-2.39 0-4.34-1.98-4.34-4.42S4.61 2.58 7 2.58c1.36 0 2.27.58 2.79 1.08l1.9-1.83C10.47.69 8.89 0 7 0 3.13 0 0 3.13 0 7s3.13 7 7 7c4.04 0 6.72-2.84 6.72-6.84 0-.46-.05-.81-.11-1.16H7zm15 0h-2V4h-2v2h-2v2h2v2h2V8h2V6z" fill="#616161"></path><path d="M-1-5h24v24H-1z"></path></g></svg></a>
+                <a aria-label="Twitter" href="https://twitter.com/googledevs" class="footer__social__icon"><svg width="17" height="14" viewBox="0 0 17 14" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd" opacity=".7"><path d="M17 1.657a6.9 6.9 0 0 1-2.003.557A3.537 3.537 0 0 0 16.53.258c-.674.406-1.42.7-2.214.858A3.462 3.462 0 0 0 11.77 0C9.844 0 8.282 1.582 8.282 3.534c0 .277.03.547.09.806C5.474 4.192 2.904 2.785 1.184.647a3.56 3.56 0 0 0-.473 1.777c0 1.226.616 2.308 1.552 2.942a3.439 3.439 0 0 1-1.58-.443v.045c0 1.712 1.202 3.14 2.798 3.466a3.452 3.452 0 0 1-1.575.06c.443 1.404 1.731 2.426 3.258 2.455A6.94 6.94 0 0 1 0 12.412 9.778 9.778 0 0 0 5.346 14c6.416 0 9.924-5.385 9.924-10.056 0-.153-.004-.306-.01-.457A7.142 7.142 0 0 0 17 1.657" fill="#616161"></path><path d="M-4-5h24v24H-4z"></path></g></svg></a>
+                <a aria-label="YouTube" href="https://www.youtube.com/user/GoogleDevelopers" class="footer__social__icon"><svg width="20" height="14" viewBox="0 0 20 14" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd" opacity=".7"><path d="M7.935 9.582V3.989l5.403 2.806-5.403 2.787zM19.8 3.02s-.195-1.371-.795-1.976c-.76-.792-1.613-.796-2.004-.843C14.203 0 10.004 0 10.004 0h-.008S5.798 0 2.999.201c-.391.047-1.243.05-2.004.843C.395 1.65.2 3.02.2 3.02S0 4.631 0 6.242v1.51c0 1.61.2 3.221.2 3.221s.195 1.372.795 1.976c.76.793 1.76.768 2.205.851 1.6.153 6.8.2 6.8.2s4.203-.006 7.001-.208c.391-.046 1.244-.05 2.004-.843.6-.604.795-1.976.795-1.976s.2-1.61.2-3.221v-1.51c0-1.611-.2-3.222-.2-3.222z" fill="#616161"></path><path d="M-2-5h24v24H-2z"></path></g></svg></a>
             </div>
         </footer>
     </main>
