--- a/index.html
+++ b/index.html
@@ -230,8 +230,9 @@
                         </div>
                     </div>
                 </section>
+                <hr style="margin-top:-150px; z-index:2000; position: relative;"/>
 
-                <section class="section--center mdl-grid site-max-width homepage-portfolio">
+                <section class="section--center mdl-grid site-max-width homepage-portfolio" style="margin-top:140px;">
                     <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent"
                        href="portfolio.html">View Portfolio</a>
 
