--- a/index.html
+++ b/index.html
@@ -125,18 +125,30 @@
                     </div>
                 </section>
 
-                <div class="belt belt--yellow">
-                    <div class="belt__image" style="background-image: url(https://io2017.storage.googleapis.com/v1/extended/extended.jpg)">
-                    </div>
-
+                <div class="belt belt--yellow belt--draggable">
                     <aside class="belt__callout">
                         <div class="belt__callout__title" aria-level="2" role="heading">
-                            In 2016, 600+ I/O Extended events were held around the world.
+                            In 2016, 2000+ people were attended to I/O Extended 2016.
                         </div>
                         <div class="belt__callout__body">
                             Many more of you joined us online. A big thank you - we hope to see you again this year.
                         </div>
+                        <div class="belt__callout__aside" style="text-align: center;padding-bottom:20px; margin-top:5px;">
+                            Drag photos to explore I/O Extended Sri Lanka 2016
+                        </div>
                     </aside>
+                    <div class="belt__draggable">
+                        <div class="belt__draggable__content" style="perspective: 1000px; backface-visibility: hidden; transform: translateX(0px);">
+                            <img class="belt__image belt__image--flex" src="img/Google I_O 2017_files/io_home_photo_1.jpg" alt="">
+                            <img class="belt__image belt__image--flex" src="img/Google I_O 2017_files/io_home_photo_2.jpg" alt="">
+                            <img class="belt__image belt__image--flex" src="img/Google I_O 2017_files/io_home_photo_3.jpg" alt="">
+                            <img class="belt__image belt__image--flex" src="img/Google I_O 2017_files/io_home_photo_4.jpg" alt="">
+                            <img class="belt__image belt__image--flex" src="img/Google I_O 2017_files/io_home_photo_5.jpg" alt="">
+                            <img class="belt__image belt__image--flex" src="img/Google I_O 2017_files/io_home_photo_6.jpg" alt="">
+                            <img class="belt__image belt__image--flex" src="img/Google I_O 2017_files/io_home_photo_7.jpg" alt="">
+                            <img class="belt__image belt__image--flex" src="img/Google I_O 2017_files/io_home_photo_8.jpg" alt="">
+                        </div>
+                    </div>
                 </div>
 
                 <section class="section--center mdl-grid site-max-width homepage-portfolio" style="margin-top:30px;">
@@ -163,11 +175,11 @@
                                             </div>
                                         </div>
                                         <div class="grid__item grid__item--12-cols grid__item--6-cols--gt-sm">
-                                            <div class="linkboxes__box" data-animation-color="#1CE8B5"
+                                            <div class="linkboxes__box" data-animation-color="#3aeaa7"
                                                  data-animation-angle="-320">
                                                 <div class="linkboxes__box__row">
                                                     <div class="linkboxes__box__image">
-                                                        <svg width="40" height="40" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><ellipse fill="#40E7B8" cx="20" cy="20" rx="20" ry="20"></ellipse><path d="M24 9h-8c-1.66 0-3 1.34-3 3v16c0 1.66 1.34 3 3 3h8c1.66 0 3-1.34 3-3V12c0-1.66-1.34-3-3-3zm-2 20h-4v-1h4v1zm3.25-3h-10.5V12h10.5v14z" fill="#4A4A4A" fill-rule="nonzero"></path><path d="M8 8h24v24H8z"></path></g></svg>
+                                                        <svg width="40" height="40" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><ellipse fill="#3aeaa7" cx="20" cy="20" rx="20" ry="20"></ellipse><path d="M24 9h-8c-1.66 0-3 1.34-3 3v16c0 1.66 1.34 3 3 3h8c1.66 0 3-1.34 3-3V12c0-1.66-1.34-3-3-3zm-2 20h-4v-1h4v1zm3.25-3h-10.5V12h10.5v14z" fill="#4A4A4A" fill-rule="nonzero"></path><path d="M8 8h24v24H8z"></path></g></svg>
                                                     </div>
                                                     <div class="linkboxes__box__title">Building on Mobile</div>
                                                 </div>
@@ -233,9 +245,6 @@
                 <hr style="margin-top:-150px; z-index:2000; position: relative;"/>
 
                 <section class="section--center mdl-grid site-max-width homepage-portfolio" style="margin-top:140px;">
-                    <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--accent"
-                       href="portfolio.html">View Portfolio</a>
-
                     <svg width="277" height="95" viewBox="0 0 277 95" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path fill="#5471F9" d="M195.129 90.674h6.85V2.514h-6.85zm-111.083 0h6.85V24.919h-6.85zM81.709 8.359c0-3.238 2.619-5.845 5.871-5.845 3.253 0 5.872 2.607 5.872 5.845 0 3.237-2.62 5.845-5.872 5.845s-5.871-2.608-5.871-5.845M220.1 9.81l-.014-7.191 40.773-.082.014 7.192z"></path><path fill="#40E7B8" d="M232.99 92.868l-6.122-3.06 43.927-87.052 6.122 3.06z"></path><path fill="#5471F9" d="M147.112 38.276L143.7 21.693l2.409-.32 3.39 16.581z"></path><path stroke="#5471F9" stroke-width=".5" d="M147.112 38.276L143.7 21.693l2.409-.32 3.39 16.581z"></path><path fill="#5471F9" d="M154.681 42.097l3.674-16.528 2.33.686-3.691 16.517z"></path><path stroke="#5471F9" stroke-width=".5" d="M154.681 42.097l3.674-16.528 2.33.686-3.691 16.517z"></path><path fill="#5471F9" d="M160.062 48.656l10.075-13.638 1.852 1.565-10.086 13.62z"></path><path stroke="#5471F9" stroke-width=".5" d="M160.062 48.656l10.075-13.638 1.852 1.565-10.086 13.62z"></path><path fill="#5471F9" d="M162.295 56.817l14.79-8.357 1.05 2.182-14.794 8.336z"></path><path stroke="#5471F9" stroke-width=".5" d="M162.295 56.817l14.79-8.357 1.05 2.182-14.794 8.336z"></path><path fill="#5471F9" d="M161.014 65.196l16.922-1.697.074 2.418-16.916 1.677z"></path><path stroke="#5471F9" stroke-width=".5" d="M161.014 65.196l16.922-1.697.074 2.418-16.916 1.677z"></path><path fill="#5471F9" d="M156.424 72.312l16.152 5.301-.92 2.238-16.138-5.317z"></path><path stroke="#5471F9" stroke-width=".5" d="M156.424 72.312l16.152 5.301-.92 2.238-16.138-5.317z"></path><path fill="#5471F9" d="M149.331 76.977l12.615 11.353-1.751 1.677-12.597-11.363z"></path><path stroke="#5471F9" stroke-width=".5" d="M149.331 76.977l12.615 11.353-1.751 1.677-12.597-11.363z"></path><path fill="#5471F9" d="M140.96 78.353l6.81 15.512-2.29.811-6.788-15.513z"></path><path stroke="#5471F9" stroke-width=".5" d="M140.96 78.353l6.81 15.512-2.29.811-6.788-15.513z"></path><path fill="#5471F9" d="M132.715 76.253l-.02 16.927-2.424-.171.04-16.92z"></path><path stroke="#5471F9" stroke-width=".5" d="M132.715 76.253l-.02 16.927-2.424-.171.04-16.92z"></path><path fill="#5471F9" d="M126.049 70.982l-6.923 15.462-2.145-1.136 6.937-15.448z"></path><path stroke="#5471F9" stroke-width=".5" d="M126.049 70.982l-6.923 15.462-2.145-1.136 6.937-15.448z"></path><path fill="#5471F9" d="M122.106 63.49l-12.627 11.34-1.498-1.904 12.634-11.32z"></path><path stroke="#5471F9" stroke-width=".5" d="M122.106 63.49l-12.627 11.34-1.498-1.904 12.634-11.32z"></path><path fill="#5471F9" d="M121.573 55.072l-16.188 5.192-.582-2.348 16.187-5.17z"></path><path stroke="#5471F9" stroke-width=".5" d="M121.573 55.072l-16.188 5.192-.582-2.348 16.187-5.17z"></path><path fill="#5471F9" d="M124.507 47.11l-16.917-1.736.417-2.382 16.908 1.754z"></path><path stroke="#5471F9" stroke-width=".5" d="M124.507 47.11l-16.917-1.736.417-2.382 16.908 1.754z"></path><path fill="#5471F9" d="M130.436 41.046l-14.764-8.403 1.35-2.01 14.748 8.415z"></path><path stroke="#5471F9" stroke-width=".5" d="M130.436 41.046l-14.764-8.403 1.35-2.01 14.748 8.415z"></path><path fill="#5471F9" d="M138.337 37.891l-10.053-13.653 2.054-1.291 10.034 13.66z"></path><path stroke="#5471F9" stroke-width=".5" d="M138.337 37.891l-10.053-13.653 2.054-1.291 10.034 13.66z"></path><path fill="#40E7B8" d="M46.11 21.874l-.006-3.01 17.065-.033.005 3.01zm-22.642 0l-.006-3.01 17.064-.033.006 3.01zm-23.462 0L0 18.864l17.064-.033.006 3.01zM46.11 44.615l-.006-3.01 17.065-.034.005 3.01zm-22.642 0l-.006-3.01 17.064-.034.006 3.01zm-23.462 0L0 41.605l17.064-.034.006 3.01z"></path><path fill="#32E8B7" d="M21.897 17.472l-3.024.006L18.839.493l3.024-.005z"></path><path fill="#40E7B8" d="M21.897 40.008l-3.023.006-.035-16.984 3.024-.006zm0 23.352l-3.023.006-.035-16.984 3.024-.006z"></path><path fill="#32E8B7" d="M44.745 17.472l-3.024.006L41.687.493 44.71.488z"></path><path fill="#40E7B8" d="M44.745 40.008l-3.024.006-.034-16.984 3.023-.006zm0 23.352l-3.024.006-.034-16.984 3.023-.006z"></path></g></svg>
                 </section>
 
