--- a/index.html
+++ b/index.html
@@ -139,12 +139,13 @@
                     </aside>
                     <div class="belt__draggable">
                         <div class="belt__draggable__content" style="perspective: 1000px; backface-visibility: hidden; transform: translateX(0px);">
-                            <img class="belt__image belt__image--flex" src="img/Google I_O 2017_files/io_home_photo_1.jpg" alt="">
-                            <img class="belt__image belt__image--flex" src="img/Google I_O 2017_files/io_home_photo_2.jpg" alt="">
-                            <img class="belt__image belt__image--flex" src="img/Google I_O 2017_files/io_home_photo_3.jpg" alt="">
-                            <img class="belt__image belt__image--flex" src="img/Google I_O 2017_files/io_home_photo_4.jpg" alt="">
-                            <img class="belt__image belt__image--flex" src="img/Google I_O 2017_files/io_home_photo_5.jpg" alt="">
-                            <img class="belt__image belt__image--flex" src="img/Google I_O 2017_files/io_home_photo_6.jpg" alt="">
+                            <img class="belt__image belt__image--flex" src="img/io_home_photo_0.jpg" alt="">
+                            <img class="belt__image belt__image--flex" src="img/io_home_photo_3.jpg" alt="">
+                            <img class="belt__image belt__image--flex" src="img/io_home_photo_1.jpg" alt="">
+                            <img class="belt__image belt__image--flex" src="img/io_home_photo_2.jpg" alt="">
+                            <img class="belt__image belt__image--flex" src="img/io_home_photo_4.jpg" alt="">
+                            <img class="belt__image belt__image--flex" src="img/io_home_photo_5.jpg" alt="">
+                            <img class="belt__image belt__image--flex" src="img/io_home_photo_6.jpg" alt="">
                             <img class="belt__image belt__image--flex" src="img/Google I_O 2017_files/io_home_photo_7.jpg" alt="">
                             <img class="belt__image belt__image--flex" src="img/Google I_O 2017_files/io_home_photo_8.jpg" alt="">
                         </div>
