--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </div>
                     <div class="mdl-cell mdl-cell--3-col">
                         <center>
-                            <img src="img/GDG-program-logo.png" style=" height:200px;"/>
+                            <img src="img/GDG-program-logo.png" style=" height:200px; margin-left:40px; margin-top:30px;"/>
                         </center>
                     </div>
                 </section>
