--- a/index.html
+++ b/index.html
@@ -245,7 +245,13 @@
                         </div>
                     </div>
                 </section>
-                <hr style="margin-top:-150px; z-index:2000; position: relative;"/>
+
+                <section class="section--center mdl-grid site-max-width" style="margin-top:-150px;">
+                    <div>
+                        <img src="img/sundar_key.jpg" />
+                    </div>
+                </section>
+                <hr style="margin-top:0; z-index:2000; position: relative;"/>
 
                 <section id="ioshedule" class="section--center mdl-grid site-max-width homepage-portfolio" style="margin-top:0px;">
                     <div class="linkboxes ">
