--- a/index.html
+++ b/index.html
@@ -100,6 +100,28 @@
                     </div>
                 </div>
 
+                <section class="section--center mdl-grid site-max-width" style="margin-top:-80px; z-index:2000;position: relative;">
+                    <div class="mdl-cell mdl-cell--3-col" style="">
+                        <h5 style="text-align: right; margin-top:0px;"><b>Powered by :</b></h5>
+                    </div>
+                    <div class="mdl-cell mdl-cell--3-col" style="">
+                        <center>
+                            <img src="img/dialog-logo.png" style="height:60px; margin-top:-32px;" />
+                        </center>
+                    </div>
+                    <div class="mdl-cell mdl-cell--3-col" style="">
+                        <center>
+                            <img src="img/IdeaMart.png" style="height:100px; margin-top:-34px; margin-left:-20px;" />
+                        </center>
+                    </div>
+                    <div class="mdl-cell mdl-cell--3-col" style="">
+                        <center>
+                            <img src="img/GDG-Logo.png" style="height:30px;" />
+                        </center>
+                    </div>
+
+                </section>
+
                 <section class="section--center mdl-grid site-max-width" style="margin-top:-60px; z-index:2000;position: relative;">
                     <div class="mdl-cell mdl-cell--12-col" style="background-color: #30E7B6; height:3px;">
                     </div>
@@ -154,7 +176,7 @@
                     </div>
                 </div>
 
-                <section class="section--center mdl-grid site-max-width homepage-portfolio" style="margin-top:30px;margin-bottom:-50px;">
+                <section class="section--center mdl-grid site-max-width homepage-portfolio" style="margin-top:140px;margin-bottom:-50px;">
                     <div class="linkboxes" style="padding:0 !important;">
                         <div class="linkboxes__content">
                             <div class="linkboxes__title">
@@ -246,7 +268,7 @@
                     </div>
                 </section>
 
-                <div style="margin-top:30px; margin-bottom:60px;">
+                <div style="margin-top:70px; margin-bottom:60px;">
                     <center>
                         <img id="imgPlay" src="img/sundar_key.jpg" style="height:560px;" data-video="https://www.youtube.com/embed/E_heSNIn8ik?autoplay=1"/>
                     </center>
