--- a/index.html
+++ b/index.html
@@ -100,23 +100,23 @@
                     </div>
                 </div>
 
-                <section class="section--center mdl-grid site-max-width" style="margin-top:-80px; z-index:2000;position: relative;">
-                    <div class="mdl-cell mdl-cell--3-col" style="">
-                        <h5 style="text-align: right; margin-top:0px;"><b>Powered by :</b></h5>
+                <section class="section--center mdl-grid site-max-width middles" style="margin-top:-80px; z-index:2000;position: relative;">
+                    <div class="mdl-cell mdl-cell--3-col middle" style="">
+                        <h5 class="powered" style="text-align: right; margin-top:0px;"><b>Powered by :</b></h5>
                     </div>
-                    <div class="mdl-cell mdl-cell--3-col" style="">
+                    <div class="mdl-cell mdl-cell--3-col middle" style="">
                         <center>
                             <img src="img/dialog-logo.png" style="height:60px; margin-top:-32px;" />
                         </center>
                     </div>
-                    <div class="mdl-cell mdl-cell--3-col" style="">
+                    <div class="mdl-cell mdl-cell--3-col middle" style="">
                         <center>
                             <img src="img/IdeaMart.png" style="height:100px; margin-top:-34px; margin-left:-20px;" />
                         </center>
                     </div>
-                    <div class="mdl-cell mdl-cell--3-col" style="">
+                    <div class="mdl-cell mdl-cell--3-col middle" style="">
                         <center>
-                            <img src="img/GDG-Logo.png" style="height:30px;" />
+                            <img src="img/GDG-Logo.png" class="gdgl" style="height:30px;" />
                         </center>
                     </div>
 
@@ -144,7 +144,7 @@
                     </div>
                     <div class="mdl-cell mdl-cell--3-col">
                         <center>
-                            <img src="img/GDG-program-logo.png" style=" height:200px; margin-left:40px; margin-top:30px;"/>
+                            <img src="img/GDG-program-logo.png" class="developerlogo" style=" height:200px; margin-left:40px; margin-top:30px;"/>
                         </center>
                     </div>
                 </section>
