Media Query for Google IO 2017 title to not display when view port is less than 768px

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                           fill="#5471F9"></path>
                 </g>
             </svg>
-            <span style="transform:translateX(-61px)" class="mdl-layout-title mdl-color-text--grey-900">Google I/O Extended 2017 </span>
+            <span style="transform:translateX(-61px)" class="mdl-layout-title mdl-color-text--grey-900" id="titleTop">Google I/O Extended 2017 </span>
             <!-- Add spacer, to align navigation to the right -->
             <div class="mdl-layout-spacer"></div>
             <!-- Navigation. We hide it in small screens. -->
