--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <h2 class="mdl-card__title-text">What is Google I/O?</h2>
                         </div>
                         <div class="mdl-card__supporting-text">
-                            Google I/O is an annual developer festival held at the outdoor Shoreline Amphitheatre. I/O Extended events bring local developer communities together to experience the I/O keynote and sessions with one another in real-time, around the globe.
+                            Google I/O is an annual developer festival held at the outdoor Shoreline Amphitheatre. To make this festival available to everyone, Google invites GDG's round the world to stream it to their local crowd as extended events. I/O Extended events bring local developer communities together to experience the I/O keynote and sessions with one another in real-time, around the globe.
                             They may also offer unique activities such as hackathons, codelabs, and demos.I/O is an outdoor developer festival
                             With hands-on learning, technical talks, and Googlers on-hand to share their insights, Google I/O is returning for the second year at Shoreline Amphitheatre
                         </div>
@@ -152,13 +152,13 @@
                 <div class="belt belt--yellow belt--draggable">
                     <aside class="belt__callout">
                         <div class="belt__callout__title" aria-level="2" role="heading">
-                            In 2016, 2000+ people were attended to I/O Extended 2016.
+                            In I/O Extended 2016 Sri Lanka, more than 2000 people gathered to experience the event
                         </div>
                         <div class="belt__callout__body">
-                            Many more of you joined us online. A big thank you - we hope to see you again this year.
+                            The developer community backed us a lot. A big thank you - we hope to see you again this year.
                         </div>
                         <div class="belt__callout__aside" style="text-align: center;padding-bottom:20px; margin-top:5px;">
-                            Drag photos to explore I/O Extended Sri Lanka 2016
+                            --Drag photos to explore I/O Extended Sri Lanka 2016--
                         </div>
                     </aside>
                     <div class="belt__draggable">
@@ -180,7 +180,7 @@
                     <div class="linkboxes" style="padding:0 !important;">
                         <div class="linkboxes__content">
                             <div class="linkboxes__title">
-                                Explore themes
+                                Event Highlights
                             </div>
                             <div class="grid grid--padded">
                                 <div class="grid__item grid__item--12-cols grid__item--8-cols--gt-md">
@@ -194,8 +194,7 @@
                                                     </div>
                                                     <div class="linkboxes__box__title">Platforms</div>
                                                 </div>
-                                                <div class="linkboxes__box__body">The platforms that connect you to
-                                                    billions of users around the world.
+                                                <div class="linkboxes__box__body">Get to know world class sotfware platforms like Google Cloud
                                                 </div>
                                             </div>
                                         </div>
@@ -208,8 +207,7 @@
                                                     </div>
                                                     <div class="linkboxes__box__title">Building on Mobile</div>
                                                 </div>
-                                                <div class="linkboxes__box__body">Infrastructure and services to take
-                                                    your mobile apps to the next level.
+                                                <div class="linkboxes__box__body">Explore services like Firebase which enable you to build your apps faster and efficiently and make it scalable for thousands of users.
                                                 </div>
                                             </div>
                                         </div>
@@ -223,7 +221,7 @@
                                                     <div class="linkboxes__box__title">Grow &amp; Earn</div>
                                                 </div>
                                                 <div class="linkboxes__box__body">Acquire and engage new users; grow
-                                                    successful businesses.
+                                                    successful businesses. See how techniques like Adsense can help grow your business
                                                 </div>
                                             </div>
                                         </div>
@@ -234,10 +232,9 @@
                                                     <div class="linkboxes__box__image">
                                                         <svg width="40" height="40" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><ellipse fill="#FF984C" cx="20" cy="20" rx="20" ry="20"></ellipse><path d="M8 8h24v24H8z"></path><path d="M25 24l-4-4v-3.18c1.16-.42 2-1.52 2-2.82 0-1.66-1.34-3-3-3s-3 1.34-3 3c0 1.3.84 2.4 2 2.82V20l-4 4h-4v5h5v-3.05l4-4.2 4 4.2V29h5v-5h-4z" fill="#4A4A4A" fill-rule="nonzero"></path><path d="M8 8h24v24H8z"></path></g></svg>
                                                     </div>
-                                                    <div class="linkboxes__box__title">Beyond Mobile</div>
+                                                    <div class="linkboxes__box__title">Beyond Today</div>
                                                 </div>
-                                                <div class="linkboxes__box__body">Expand to new interfaces and push the
-                                                    limits of what’s possible.
+                                                <div class="linkboxes__box__body">Witness new technologies like Machine Learning and deep learning as well as AR technologies like Tango and Daydream
                                                 </div>
                                             </div>
                                         </div>
@@ -279,14 +276,14 @@
                     <div class="linkboxes ">
                         <div class="linkboxes__content">
                             <div class="linkboxes__title">
-                                Shedule of I/O 17 Sri Lanka
+                                Schedule for I/O 17 Sri Lanka
                             </div>
                             <div class="grid grid--padded">
                                 <div class="grid__item grid__item--12-cols grid__item--8-cols--gt-md">
                                     <div class="grid grid--padded">
-                                        In a few weeks, we’ll start sharing sessions, time and location details, and provide the ability to create your own custom schedule. The schedule will be updated regularly until the event. Make sure to check back often, or sign up to receive notifications.
+                                        In a few weeks, we’ll start sharing details about sessions and other attractions at the extended event in Sri Lanka. 
                                     <br/>
-                                        You can collect your badge beginning May 16th between 7AM-7PM at Shoreline Amphitheatre. Keynote seating will be assigned on a first come, first served basis at badge pick-up.
+                                        You will be notified through our communication channels in Google+ as well as Facebook and twitter; when the registration is open.
                                     </div>
                                 </div>
                                 <div class="grid__item grid__item--4-cols--gt-sm grid__item--4-cols--gt-md">
