youtube url change

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
                 <div style="margin-top:70px; margin-bottom:60px;">
                     <center>
-                        <img id="imgPlay" src="img/sundar_key.jpg" style="height:560px;" data-video="https://www.youtube.com/embed/E_heSNIn8ik?autoplay=1"/>
+                        <img id="imgPlay" src="img/sundar_key.jpg" style="height:560px;" data-video="https://www.youtube.com/embed/videoseries?list=PLj05l3KM-fQ-p56SIKNWFZ47Yjts6t5J8"/>
                     </center>
                 </div>
                 <hr style="margin-top:0; z-index:2000; position: relative;"/>
