Updated Registration Link

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a class="mdl-navigation__link mdl-color-text--grey-900" href="#about">About I/O</a>
                 <a class="mdl-navigation__link mdl-color-text--grey-900" href="#ioshedule">Schedule</a>
                 <a class="mdl-button mdl-button--raised mdl-js-button mdl-js-ripple-effect mdl-button--colored"
-                   target="_blank" href="http://rsvp.lk/gdgsrilanka/google-io-2017-sri-lanka">Register Now</a>
+                   target="_blank" href="http://io.rsvp.lk/">Register Now</a>
             </nav>
         </div>
     </header>
