changed schedule and partner message

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <div class="mdl-cell mdl-cell--4-col middle">
                         <center>
                             <img src="img/rsvp_logo.png" class="gdgl gdg2" style="height:35px;" />
-                            <p class="title1">Event Partner</p>
+                            <p class="title1">Registration Partner</p>
                         </center>
                     </div>
 
@@ -367,9 +367,9 @@
                             <div class="grid grid--padded">
                                 <div class="grid__item grid__item--12-cols grid__item--8-cols--gt-md">
                                     <div class="grid grid--padded">
-                                        In a few weeks, we’ll start sharing details about sessions and other attractions at the extended event in Sri Lanka. 
+                                        Take a look at the agenda for Google I/O extended 2017 Sri Lanka
                                     <br/>
-                                        You will be notified through our communication channels in Google+ as well as Facebook and twitter; when the registration is open.
+                                        
                                     </div>
                                 </div>
                                 <div class="grid__item grid__item--4-cols--gt-sm grid__item--4-cols--gt-md">
